Fix alignment of images in main.css

--- a/css/main.css
+++ b/css/main.css
@@ -105,5 +105,5 @@ img {
   width: 80%;
   height: 15%;
   border-radius: 20px;
-  text-align: center;
+  align-content: center;
 }
